3 and 4 points done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <p id="description">Please fill up this form to help us to know you better</p>
 
+<form id="survay-form">
+    <input id="name" type="text" textholder="Adnan">
 
+</form>
 
 
 
