--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-
+ <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Enmanuel and Adnan  Page</title>
 
 <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,6 +19,8 @@
 
 <form id="survay-form">
     <input id="name" type="text" textholder="Adnan">
+    <input id="email" type="email" placeholder="email" name="email" required>
+
 
 </form>
 
