--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <p id="description">Please fill up this form to help us to know you better</p>
 
 <form id="survay-form">
-    <input id="name" type="text" textholder="Adnan">
+    <input id="name" type="text" placeholder="Adnan" required>
     <input id="email" type="email" placeholder="email" name="email" required>
-
+    <input id="number" type="number" name="number" required>
 
 </form>
 
