--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <label> How you prefer to be weight it?
             <br><input type="radio" name="weight" value="KG">kg
             <input type="radio" name="weight" value="LB">lB
-            
+            </label><br>
 
         <label>Are you feeling well?
             <select name="question" id="dropdown">
@@ -41,13 +41,14 @@
             </select></label><br>
 
         <label>which social media do you use:
-            <input type="checkbox" value="facebook" name="social">
-            <input type="checkbox" value="Instagram" name="social">
-        </label>
+            <input type="checkbox" value="facebook" name="social">Facebook
+            <input type="checkbox" value="Instagram" name="social">Instagram
+        </label><br>
         <textarea name="textarea" rows="4" cols="50">
         Any Feedback!
-        </textarea>
-        <button id="submit" value="Submit"></button>
+        </textarea><br>
+
+        <button id="submit" value="Submit">Submit</button>
     </form>
 
 
